--- a/frontend/src/components/01_Navbar/Navbar.module.css
+++ b/frontend/src/components/01_Navbar/Navbar.module.css
@@ -1,33 +1,74 @@
 .navbar {
   max-width: 1600px;
   min-width: 300px;
-  width: 100%;
+  width:100%;
   height: 100px;
-  border: solid black 1px;
+  /* border: solid black 1px; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 0px 20px;
+  box-sizing: border-box; 
 }
 
 a {
   height: auto;
-  width: auto;
+  width:auto;
   background: inherit;
 }
 
+.navLogo {
+  height: 30px;
+  width: fit-content;
+}
+
 img {
-  width: auto;
-  height: auto;
+  width: fit-content;
+  height: 30px;
   object-fit: cover;
 }
 
 .navbarLinks {
-  max-width: 400px;
+  max-width: 300px;
   width: 100%;
-  height: auto;
+  height: fit-content;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   list-style: none;
+}
+
+li {
+  width: fit-content;
+  font-weight: 400;
+}
+
+.container {
+  max-width:fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+button {
+  width: fit-content;
+  height: fit-content;
+}
+
+.btn {
+  width: auto;
+  height: auto;
+  padding: 10px 30px;
+  border-radius: 20px;
+  border: #ff6347 1px solid;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.btn:hover {
+  background-color: #ff6347;
+  color: white;
 }
