--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,9 @@
 * {
   padding: 0;
-  margin: auto;
-  border-radius: 0;
   background-color:#fff;
   width: 100%;
   height: 100%;
-
+  box-sizing: border-box;
 }
 
 body {
