--- a/frontend/src/components/01_Navbar/Navbar.module.css
+++ b/frontend/src/components/01_Navbar/Navbar.module.css
@@ -1,25 +1,33 @@
 .navbar {
-  max-width: 1600px;
+  max-width: 1700px;
   min-width: 300px;
-  width:100%;
+  width: 100%;
   height: 100px;
-  /* border: solid black 1px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 20px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  /* border: 1px solid black; */
+  z-index: 50;
 }
 
 a {
-  height: auto;
-  width:auto;
+  height: fit-content;
+  width: fit-content;
   background: inherit;
+  text-decoration: none;
+  color: black;
+  background-color: inherit;
 }
 
 .navLogo {
   height: 30px;
   width: fit-content;
+  background-color: inherit;
 }
 
 img {
@@ -36,11 +44,28 @@ img {
   justify-content: space-between;
   align-items: center;
   list-style: none;
+  background-color: inherit;
+}
+
+.navLink {
+  height: fit-content;
+  width: fit-content;
+  background: inherit;
+  text-decoration: none;
+  color: black;
+  background-color: inherit;
+
+}
+
+.navLink:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 li {
   width: fit-content;
   font-weight: 400;
+  background-color: inherit;
 }
 
 .container {
@@ -49,12 +74,14 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  gap: 20px;
+  gap: 30px;
+  background-color: inherit;
 }
 
 button {
   width: fit-content;
   height: fit-content;
+  background-color: inherit;
 }
 
 .btn {
