--- a/frontend/src/components/03_ExploreMenu/ExploreMenu.module.css
+++ b/frontend/src/components/03_ExploreMenu/ExploreMenu.module.css
@@ -31,7 +31,7 @@
 
 
 .menuItem {
-    width: 250px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,9 +41,16 @@
     user-select: none;
 }
 
+.active {
+    border: 4px solid tomato;
+    border-radius: 50%;
+    padding: 3px;
+}
+
 .menuImg {
     width: 120px;
     height: 120px;
+    cursor: pointer;
 }
 
 .menuName {
